<resources>
    <string name="app_name" translatable="false">Line Shard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="profileDrawer">Profile</string>
    <string name="homeDrawer">Home</string>
    <string name="cartDrawer">Cart</string>
    <string name="categoryDrawer">Category</string>
    <string name="myPurchasesDrawer">My Purchases</string>
    <string name="logInButton">Log in my account</string>
    <string name="maybeLaterButton">Maybe later</string>
    <string name="logInMessage">Don\'t want to log in now?</string>
    <string name="categoriesMessage">Categories</string>
    <string name="offersMessage">Best sellers:</string>
    <string name="search">Search</string>
    <string name="myPurchases">My Purchases</string>
    <string name="myCart">My Cart</string>
    <string name="addToCart">Add to cart</string>
    <string name="emptyCart">Your cart is empty.</string>
    <string name="endPurchase">Finish your purchase</string>
    <string name="finishPurchase">Finish</string>
    <string name="myHouse">House 1</string>
    <string name="fakeAddress">Mine Street, 123, Our Ville</string>
    <string name="purchaseSucess">Your purchase was made sucessfully!</string>
    <string name="backToHome">Go back to Home</string>
    <string name="saleOldPrice">Old Price</string>
    <string name="saleNewPrice">For</string>
    <string name="viewAllCat">View All Products</string>
    <string name="catFiction">Fiction</string>
    <string name="catThriller">Thriller</string>
    <string name="localEntrega">Shipping To</string>
    <string name="fantasyCat">Fantasy</string>
    <string name="catAutoajuda">Self Help</string>
    <string name="catAll">All Categories</string>
    <string name="catOther">Other</string>
    <string name="description">Description</string>
    <string name="bookCoverDescription">Book Cover</string>
    <string name="activeUser">Logged in as:</string>
    <string name="sign_out">Sign Out</string>
    <string name="purchase">Purchase #</string>
    <string name="about_this_app">About this App</string>
    <string name="quantity">Quantity</string>
    <string name="about_text">\"Line Shard\" was developed as the final project of the subject of Programming for Mobile Devices of the 5th Semester of the Computer Science course.</string>
    <string name="credits">Credits:</string>
    <string name="product">Product</string>
    <string name="author">Author</string>
    <string name="numPag">Pages</string>
    <string name="sendEmail">Send email</string>
    <string name="addedCart">Added to cart</string>
    <string name="alreadyInCart">Already added to cart, adding more</string>
    <string name="specifyQuantity">Please, specify quantity.</string>
    <string name="name">Name</string>
    <string name="Email" translatable="false">Email</string>
    <string name="notLogged">You are not logged in.</string>
    <string name="read_more">Read more</string>
</resources>